test('test');
// // @flow
// import TextInput from '../../components/text-input';
// import { createExpectRender } from './utils';
//
// const theme = {
//   typography: {
//     fontSize: level => level * 2 + 16, // 0 = 16, 1 = 18, -1 = 14 etc.
//     rhythm: ratio => ratio * 24,
//     lineHeight: 24,
//   },
//   colors: {
//     primary: 'blue',
//     success: 'green',
//     warning: 'orange',
//     danger: 'red',
//     black: 'black',
//     white: 'white',
//     gray: 'gray',
//   },
//   text: {
//     bold: 600,
//     color: 'black',
//     // github.com/twbs/bootstrap/blob/v4-dev/scss/_variables.scss
//     fontFamily: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif',
//     rawStyle: {
//       fixFontSmoothing: true,
//     },
//   },
//   textInput: {
//     disabledOpacity: 0.5,
//   },
// };
//
// const expectRender = createExpectRender(theme);
//
// test('render', () => {
//   expectRender(() => <TextInput />);
// });
//
// test('disabled', () => {
//   expectRender(() => <TextInput disabled />);
// });
//
// test('color', () => {
//   expectRender(() => <TextInput color="primary" />);
// });
